Added auth, template and db plugin files. Added auth sub-plugins test and LDAP. Closes #64.

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ div#textos {
 	font-family: arial, times, Times, georgia, serif;
 	font-size: 12px;
 	height: auto;
+	min-height: 100px;
 /*	float: left;*/
 	position: static;
 	line-height: 20px;
@@ -193,6 +194,10 @@ div#textos a:link:hover
 	background-color:#E3F7DA;
 	text-decoration: none;
 	padding: 2px;
+}
+
+small a {
+	color: #333;
 }
 
 /* IMAGES */
