Added overlay-blocks.png to the repository so that it is independent of the ACS website.

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -6,7 +6,7 @@ body {
 	margin: 0;
 	padding: 5px;
 	background-color:#2f5c24;
-	background-image: url(http://acs.sch.ae/acs/templates/rt_chromatophore_j15/images/bg/overlay-blocks.png);
+	background-image: url(../images/overlay-blocks.png);
 	_text-align: center;
 }
 
