--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -237,7 +237,9 @@ div.spacer {
   float: left;
   margin-right: -100%;
   display: none;
-  width:32px;
+  background: url(../images/throbber.gif) no-repeat;
+  width: 32px;
+  min-height: 32px;
 }
 
 /* Dialog */
