Added fancy Javascript transitions that make the UX much friendlier.

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -275,18 +275,19 @@ div.spacer {
 
 /* Errors */
 
-div.error {
+div.error, div.notice {
+  padding:10px;   
+  font-weight:bold;  
   margin-top: 10px;
+  display: none;
+}
+
+div.error {
   background: #eccecf;  
   border:2px solid #9e0b0f;  
-  padding:10px;  
-  font-weight:bold;  
 }
 
 div.notice {
-  margin-top: 10px;
   background: #e5f2be;   
   border:2px solid #bedf5d;   
-  padding:10px;   
-  font-weight:bold;  
 }  
