Initial version of Less.js conversion.

--- a/stylesheets/application.less
+++ b/stylesheets/application.less
@@ -1,5 +1,7 @@
+@green = #2f5c24;
+
 body {
-background-color:#2f5c24;
+background-color:@green;
 background-image:url(../images/overlay-blocks.png);
 margin:0;
 padding:5px;
