--- a/stylesheets/application.less
+++ b/stylesheets/application.less
@@ -1,222 +1,222 @@
-@green = #2f5c24;
+@v_green: #2f5c24;
 
 body {
-background-color:@green;
-background-image:url(../images/overlay-blocks.png);
-margin:0;
-padding:5px;
+  background-color: @v_green;
+  background-image:url(../images/overlay-blocks.png);
+  margin:0;
+  padding:5px;
 }
 
 p {
-display:block;
-float:left;
-line-height:20px;
-margin:3px 10px;
-padding:4px;
-position:relative;
-text-align:justify;
-text-indent:10px;
-width:auto;
+  display:block;
+  float:left;
+  line-height:20px;
+  margin:3px 10px;
+  padding:4px;
+  position:relative;
+  text-align:justify;
+  text-indent:10px;
+  width:auto;
 }
 
 div {
-color:#333;
-font-family:arial, times, Times, georgia, serif;
-font-size:12px;
-height:auto;
-margin:0 auto;
-padding:10px;
-text-align:justify;
+  color:#333;
+  font-family:arial, times, Times, georgia, serif;
+  font-size:12px;
+  height:auto;
+  margin:0 auto;
+  padding:10px;
+  text-align:justify;
 }
 
 div#content {
-background-color:#FFF;
-color:#333;
-font-family:arial, times, Times, georgia, serif;
-font-size:12px;
-height:auto;
-line-height:20px;
-margin:0 auto;
-min-height:100px;
-padding:8px;
-position:static;
-text-align:justify;
+  background-color:#FFF;
+  color:#333;
+  font-family:arial, times, Times, georgia, serif;
+  font-size:12px;
+  height:auto;
+  line-height:20px;
+  margin:0 auto;
+  min-height:100px;
+  padding:8px;
+  position:static;
+  text-align:justify;
 }
 
 div#header,div#footer {
-background-color:#222;
-padding:0;
-position:static;
-width:auto;
+  background-color:#222;
+  padding:0;
+  position:static;
+  width:auto;
 }
 
 div#footer {
-color:#ddd;
-padding:5px;
+  color:#ddd;
+  padding:5px;
 }
 
 div#footer a {
-color:#aaa;
+  color:#aaa;
 }
 
 h2,h2 a {
-color:#FFF;
-font-family:Helvetica, Serifa, sans-serif;
-font-size:19px;
-letter-spacing:5px;
-margin:0;
-padding:32px;
-text-align:center;
-text-decoration:none;
-text-shadow:0 5px 1px #000;
-text-transform:uppercase;
+  color:#FFF;
+  font-family:Helvetica, Serifa, sans-serif;
+  font-size:19px;
+  letter-spacing:5px;
+  margin:0;
+  padding:32px;
+  text-align:center;
+  text-decoration:none;
+  text-shadow:0 5px 1px #000;
+  text-transform:uppercase;
 }
 
 h1 {
-border-bottom:1px solid #ADADAD;
-color:#464646;
-font-family:Times;
-font-size:40px;
-font-weight:400;
-letter-spacing:-2px;
-line-height:35px;
-margin:10px 0 0 14px;
-max-width:345px;
-padding:2px;
-text-align:left;
-text-shadow:0 1px 5px #ADADAD;
+  border-bottom:1px solid #ADADAD;
+  color:#464646;
+  font-family:Times;
+  font-size:40px;
+  font-weight:400;
+  letter-spacing:-2px;
+  line-height:35px;
+  margin:10px 0 0 14px;
+  max-width:345px;
+  padding:2px;
+  text-align:left;
+  text-shadow:0 1px 5px #ADADAD;
 }
 
 h1 span {
-color:#538A1F;
-font-family:arial;
-font-size:12px;
-font-variant:small-caps;
-letter-spacing:2px;
-text-align:right;
-text-shadow:none;
+  color:#538A1F;
+  font-family:arial;
+  font-size:12px;
+  font-variant:small-caps;
+  letter-spacing:2px;
+  text-align:right;
+  text-shadow:none;
 }
 
 ul {
-display:block;
-font-family:Helvetica, Geneva, sans-serif;
-font-size:12px;
-font-weight:300;
-margin:0;
-padding:6px;
-position:relative;
-width:auto;
+  display:block;
+  font-family:Helvetica, Geneva, sans-serif;
+  font-size:12px;
+  font-weight:300;
+  margin:0;
+  padding:6px;
+  position:relative;
+  width:auto;
 }
 
 li {
-list-style:none;
-margin:0;
+  list-style:none;
+  margin:0;
 }
 
 li a:link,li a:visited {
-background:transparent;
-color:#CBF3A6;
-padding:10px 6px;
-text-decoration:none;
+  background:transparent;
+  color:#CBF3A6;
+  padding:10px 6px;
+  text-decoration:none;
 }
 
 div#content a:link,div#content a:visited {
-background-color:#FFF;
-border-bottom:1px dotted #5E952C;
-color:#444;
-cursor:move;
-padding:2px;
-text-decoration:none;
+  background-color:#FFF;
+  border-bottom:1px dotted #5E952C;
+  color:#444;
+  cursor:move;
+  padding:2px;
+  text-decoration:none;
 }
 
 div#content a:link:hover {
-background-color:#E3F7DA;
-color:#000;
-padding:2px;
-text-decoration:none;
+  background-color:#E3F7DA;
+  color:#000;
+  padding:2px;
+  text-decoration:none;
 }
 
 .teacher {
-float:left;
-font-size:120%;
+  float:left;
+  font-size:120%;
 }
 
 div.spacer {
-background-color:#8FC73E;
-height:1em;
+  background-color:#8FC73E;
+  height:1em;
 }
 
 .red {
-color:maroon;
+  color:maroon;
 }
 
 .yellow {
-color:#DAA520;
+  color:#DAA520;
 }
 
 .green {
-color:#228B22;
+  color:#228B22;
 }
 
 .purple {
-color:#F0F;
+  color:#F0F;
 }
 
 .throbber {
-background:url(../images/throbber.gif) no-repeat;
-display:none;
-float:left;
-margin-right:-100%;
-min-height:32px;
-width:32px;
+  background:url(../images/throbber.gif) no-repeat;
+  display:none;
+  float:left;
+  margin-right:-100%;
+  min-height:32px;
+  width:32px;
 }
 
 .ui-dialog {
-background-color:#fff;
-border:2px solid #000;
+  background-color:#fff;
+  border:2px solid #000;
 }
 
 .ui-widget-overlay {
-background:#000;
-height:100%;
-left:0;
-opacity:.7;
-position:absolute;
-top:0;
-width:100%;
+  background:#000;
+  height:100%;
+  left:0;
+  opacity:.7;
+  position:absolute;
+  top:0;
+  width:100%;
 }
 
 .ui-dialog-title {
-float:left;
-font-style:oblique;
-font-variant:small-caps;
+  float:left;
+  font-style:oblique;
+  font-variant:small-caps;
 }
 
 .ui-dialog-titlebar-close {
-float:right;
+  float:right;
 }
 
 .ui-dialog-content {
-clear:both;
+  clear:both;
 }
 
 div.error,div.notice {
-display:none;
-font-weight:700;
-margin-top:10px;
-padding:10px;
+  display:none;
+  font-weight:700;
+  margin-top:10px;
+  padding:10px;
 }
 
 div.error {
-background:#eccecf;
-border:2px solid #9e0b0f;
+  background:#eccecf;
+  border:2px solid #9e0b0f;
 }
 
 div.notice {
-background:#e5f2be;
-border:2px solid #bedf5d;
+  background:#e5f2be;
+  border:2px solid #bedf5d;
 }
 
 div#header,li a:link:hover,li a:visited:hover {
-color:#FFF;
+  color:#FFF;
 }
