One more minor tweak to the stylesheet.

--- a/stylesheets/application.less
+++ b/stylesheets/application.less
@@ -67,6 +67,10 @@ div {
       color: #aaa;
     }
   }
+  
+  #header li a:link:hover,li a:visited:hover {
+    color:#FFF;
+  }
 }
 
 h2,h2 a {
@@ -129,8 +133,6 @@ li {
     text-decoration:none;
   }
 }
-
-
 
 .teacher {
   float:left;
@@ -211,8 +213,4 @@ div.error {
 div.notice {
   background:#e5f2be;
   border:2px solid #bedf5d;
-}
-
-div#header,li a:link:hover,li a:visited:hover {
-  color:#FFF;
 }
