--- a/stylesheets/application.less
+++ b/stylesheets/application.less
@@ -1,7 +1,7 @@
-@v_green: #2f5c24;
+@green: #2f5c24;
 
 body {
-  background-color: @v_green;
+  background-color: @green;
   background-image:url(../images/overlay-blocks.png);
   margin:0;
   padding:5px;
