Added proper referencing to the new 960px grid.

--- a/stylesheets/application.less
+++ b/stylesheets/application.less
@@ -1,3 +1,4 @@
+@import "grid";
 @green: #2f5c24;
 
 body {
@@ -218,4 +219,9 @@ div.notice {
 label {
   float: left;
   width: 6em;
+}
+
+.times {
+  .grid(1);
+  .push(2);
 }
